--- a/source/cv.html
+++ b/source/cv.html
@@ -14,23 +14,13 @@ use:
             >
         </div>
         <div class="media-body">
-            <h1>Luis Montealegre <small>Web Developer</small></h1>
+            <h1 class="title">Luis Montealegre <small>Web Developer</small></h1>
             <p>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 San Antonio TX &nbsp;
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 montealegreluis@gmail.com
             </p>
-        </div>
-    </div>
-</header>
-<main>
-    <div class="row">
-        <section class="col-xs-12 col-sm-6">
-            <h2>
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-                About
-            </h2>
             <p>
                 I've been programming, professionally since graduating with a
                 Master's Degree in Computer Science in 2003. I have over 12
@@ -38,26 +28,12 @@ use:
                 In my spare time I love to spend time with my family and learn
                 new programming languages.
             </p>
-        </section>
-        <section class="col-xs-12 col-sm-6">
-            <h2>
-                <i class="fa fa-university" aria-hidden="true"></i>
-                Education
-            </h2>
-            <ul>
-                <li>
-                    Master in Computer Science. Benemérita Universidad Autónoma
-                    de Puebla. 2003-2005.
-                </li>
-                <li>
-                    BS in Computer Science. Benemérita Universidad Autónoma de
-                    Puebla. 1998-2003.
-                </li>
-            </ul>
-        </section>
+        </div>
     </div>
+</header>
+<main>
     <div class="row">
-        <section class="col-xs-12">
+        <section class="col-xs-12 col-sm-8">
             <h2>
                 <i class="fa fa-building" aria-hidden="true"></i>
                 Work Experience
@@ -113,9 +89,21 @@ use:
                 </li>
             </ul>
         </section>
-    </div>
-    <div class="row">
-        <section class="col-xs-12 col-sm-6">
+        <section class="col-xs-12 col-sm-4">
+            <h2>
+                <i class="fa fa-university" aria-hidden="true"></i>
+                Education
+            </h2>
+            <ul>
+                <li>
+                    Master in Computer Science. Benemérita Universidad Autónoma
+                    de Puebla. 2003-2005.
+                </li>
+                <li>
+                    BS in Computer Science. Benemérita Universidad Autónoma de
+                    Puebla. 1998-2003.
+                </li>
+            </ul>
             <h2>
                 <i class="fa fa-certificate" aria-hidden="true"></i>
                 Certifications
@@ -139,7 +127,9 @@ use:
                 <li>English & Spanish</li>
             </ul>
         </section>
-        <section class="col-xs-12 col-sm-6">
+    </div>
+    <div class="row">
+        <section class="col-xs-12">
             <h2>
                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                 Teaching experience
