--- a/source/cv.html
+++ b/source/cv.html
@@ -4,147 +4,169 @@ title: Curriculum
 use:
 - posts_categories
 ---
-<header>
+<header class="row">
     <div class="media col-sm-12 avatar">
-        <div class="media-left media-middle">
-            <img
-                src="/images/luis.jpg"
-                class="media-object img-circle"
-                alt="Luis"
-            >
-        </div>
-        <div class="media-body">
-            <h1 class="title">Luis Montealegre <small>Web Developer</small></h1>
-            <p>
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                San Antonio TX &nbsp;
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                montealegreluis@gmail.com
-            </p>
-            <p>
-                I've been programming, professionally since graduating with a
-                Master's Degree in Computer Science in 2003. I have over 12
-                years experience in tech both in Mexico and the United States.
-                In my spare time I love to spend time with my family and learn
-                new programming languages.
-            </p>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h1 class="title">Luis Montealegre <small>Web Developer</small></h1>
+            </div>
+            <div class="panel-body">
+                <div class="media-left media-middle">
+                    <img
+                        src="/images/luis.jpg"
+                        class="media-object img-circle"
+                        alt="Luis"
+                    >
+                </div>
+                <div class="media-body">
+                    <p>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        San Antonio TX
+                    </p>
+                    <p>
+                        I've been programming, professionally since graduating with a
+                        Master's Degree in Computer Science in 2003. I have over 12
+                        years experience in tech both in Mexico and the United States.
+                        In my spare time I love to spend time with my family and learn
+                        new programming languages.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </header>
 <main>
     <div class="row">
         <section class="col-xs-12 col-sm-8">
-            <h2>
-                <i class="fa fa-building" aria-hidden="true"></i>
-                Work Experience
-            </h2>
-            <ul>
-                <li>
-                    <em>Inertia Interactive Media [05/15 – 12/15].</em>.
-                    <strong>Web Developer</strong>.
-                    Maintainer of a <strong>Symfony2</strong> application with
-                    an integration to the <strong>Salesforfoce SOAP API</strong>
-                    implemented via Web hooks and <strong>RabbitMQ</strong>
-                    queues.
-                </li>
-                <li>
-                    <em>Digizent International [04/13 – 12/13]</em>.
-                    <strong>PHP developer</strong> of a <strong>Symfony1</strong>
-                    application to manage email campaigns for fundraising.
-                </li>
-                <li>
-                    <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
-                    <strong>.NET Developer</strong> of the Advancement Solutions
-                    team. I collaborated with the team with a product developed
-                    in <strong>C#</strong> and <strong>VB</strong>, which made
-                    heavy use of <strong>Oracle PL/SQL</strong> stored procedures.
-                </li>
-                <li>
-                    <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
-                    Consultant</strong>. During this period I worked maintaining
-                    the data access layer of a POS using <strong>Hibernate</strong>
-                    and <strong>PostgreSQL</strong> and <strong>couching</strong>
-                    some Jr. consultants.
-                </li>
-                <li>
-                    <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
-                    <strong>Java and PHP developer</strong> of the department:
-                    Desarrollo e Innovación de Sistemas. I developed a
-                    monitoring application for some customer service systems
-                    written in <strong>Java</strong> with a reporting website
-                    written in <strong>PHP</strong>.
-                </li>
-                <li>
-                    <em>Independent PHP consultant (part-time) [08/07 – 01/14]</em>.
-                    I worked for several companies in Puebla. I developed several
-                    applications with <strong>ZF1</strong>, <strong>Slim</strong>
-                    and <strong>Silex</strong> mainly.
-                </li>
-                <li>
-                    <em>Independent PHP consultant (full-time) [01/14 – 05/15]</em>.
-                    I worked for several agencies in Mexico City (Indava and
-                    Mupcow), and some others in Puebla (Sistemas Integrales de
-                    Cómputo Montellano (SICOM) and Sii Ayuda)  maintaining
-                    <strong>Symfony2</strong> applications mainly.
-                </li>
-            </ul>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-building" aria-hidden="true"></i>
+                        Work Experience
+                    </h2>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <em>Inertia Interactive Media [05/15 – 12/15].</em>.
+                        <strong>Web Developer</strong>.
+                        Maintainer of a <strong>Symfony2</strong> application with
+                        an integration to the <strong>Salesforfoce SOAP API</strong>
+                        implemented via Web hooks and <strong>RabbitMQ</strong>
+                        queues.
+                    </li>
+                    <li class="list-group-item">
+                        <em>Digizent International [04/13 – 12/13]</em>.
+                        <strong>PHP developer</strong> of a <strong>Symfony1</strong>
+                        application to manage email campaigns for fundraising.
+                    </li>
+                    <li class="list-group-item">
+                        <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
+                        <strong>.NET Developer</strong> of the Advancement Solutions
+                        team. I collaborated with the team with a product developed
+                        in <strong>C#</strong> and <strong>VB</strong>, which made
+                        heavy use of <strong>Oracle PL/SQL</strong> stored procedures.
+                    </li>
+                    <li class="list-group-item">
+                        <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
+                        Consultant</strong>. During this period I worked maintaining
+                        the data access layer of a POS using <strong>Hibernate</strong>
+                        and <strong>PostgreSQL</strong> and <strong>couching</strong>
+                        some Jr. consultants.
+                    </li>
+                    <li class="list-group-item">
+                        <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
+                        <strong>Java and PHP developer</strong> of the department:
+                        Desarrollo e Innovación de Sistemas. I developed a
+                        monitoring application for some customer service systems
+                        written in <strong>Java</strong> with a reporting website
+                        written in <strong>PHP</strong>.
+                    </li>
+                    <li class="list-group-item">
+                        <em>Independent PHP consultant (part-time) [08/07 – 01/14]</em>.
+                        I worked for several companies in Puebla. I developed several
+                        applications with <strong>ZF1</strong>, <strong>Slim</strong>
+                        and <strong>Silex</strong> mainly.
+                    </li>
+                    <li class="list-group-item">
+                        <em>Independent PHP consultant (full-time) [01/14 – 05/15]</em>.
+                        I worked for several agencies in Mexico City (Indava and
+                        Mupcow), and some others in Puebla (Sistemas Integrales de
+                        Cómputo Montellano (SICOM) and Sii Ayuda)  maintaining
+                        <strong>Symfony2</strong> applications mainly.
+                    </li>
+                </ul>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                        Teaching experience
+                    </h2>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        I am currently working at Codeup in SA. TX. as a full-time
+                        instructor teaching either PHP or Java to future entry-level
+                        full-stack developers During the last 11 years I've been also
+                        working as a part-time lecturer in 10 universities in Puebla. I
+                        have given classes to more than 65 groups, bachelor and master
+                        degree. I have successfully directed 4 thesis. I also have
+                        published some papers being the most relevant a chapter in the
+                        Lecture Notes in Computer Science Volume Number 4386, pages
+                        194–211 in 2007.
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="col-xs-12 col-sm-4">
-            <h2>
-                <i class="fa fa-university" aria-hidden="true"></i>
-                Education
-            </h2>
-            <ul>
-                <li>
-                    Master in Computer Science. Benemérita Universidad Autónoma
-                    de Puebla. 2003-2005.
-                </li>
-                <li>
-                    BS in Computer Science. Benemérita Universidad Autónoma de
-                    Puebla. 1998-2003.
-                </li>
-            </ul>
-            <h2>
-                <i class="fa fa-certificate" aria-hidden="true"></i>
-                Certifications
-            </h2>
-            <ul>
-                <li>Latinux Certified Linux Operator</li>
-                <li>Oracle Certified Java Programmer</li>
-                <li>
-                    Microsoft Certified Technology Specialist, Microsoft SQL
-                    Server
-                </li>
-                <li>
-                    Microsoft Certified Technology Specialist, Web Applications
-                </li>
-            </ul>
-            <h2>
-                <i class="fa fa-language" aria-hidden="true"></i>
-                Languages
-            </h2>
-            <ul>
-                <li>English & Spanish</li>
-            </ul>
-        </section>
-    </div>
-    <div class="row">
-        <section class="col-xs-12">
-            <h2>
-                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                Teaching experience
-            </h2>
-            <p>
-                I am currently working at Codeup in SA. TX. as a full-time
-                instructor teaching either PHP or Java to future entry-level
-                full-stack developers During the last 11 years I've been also
-                working as a part-time lecturer in 10 universities in Puebla. I
-                have given classes to more than 65 groups, bachelor and master
-                degree. I have successfully directed 4 thesis. I also have
-                published some papers being the most relevant a chapter in the
-                Lecture Notes in Computer Science Volume Number 4386, pages
-                194–211 in 2007.
-            </p>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-university" aria-hidden="true"></i>
+                        Education
+                    </h2>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <strong>Master in Computer Science</strong>. Benemérita Universidad Autónoma
+                        de Puebla. 2003-2005.
+                    </li>
+                    <li class="list-group-item">
+                        <strong>BS in Computer Science</strong>. Benemérita Universidad Autónoma de
+                        Puebla. 1998-2003.
+                    </li>
+                </ul>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-certificate" aria-hidden="true"></i>
+                        Certifications
+                    </h2>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">Latinux Certified Linux Operator</li>
+                    <li class="list-group-item">Oracle Certified Java Programmer</li>
+                    <li class="list-group-item">
+                        Microsoft Certified Technology Specialist, Microsoft SQL
+                        Server
+                    </li>
+                    <li class="list-group-item">
+                        Microsoft Certified Technology Specialist, Web Applications
+                    </li>
+                </ul>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-language" aria-hidden="true"></i>
+                        Languages
+                    </h2>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">English & Spanish</li>
+                </ul>
+            </div>
         </section>
     </div>
 </main>
