Update the style of the headings in the portfolio page.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -66,14 +66,14 @@
     <div class="content container">
         <div class="row">
             <div class="col-sm-12">
-                <header class="page-header">
-    <h1>
+                <header>
+    <h1 class="title">
         <i class="fa fa-briefcase" aria-hidden="true"></i>
         Portfolio
     </h1>
 </header>
 <section>
-    <h2 id="applications">
+    <h2 id="applications" class="title">
         <i class="fa fa-bookmark" aria-hidden="true"></i>
         Applications
     </h2>
@@ -424,7 +424,7 @@
     </div>
 </section>
 <section>
-    <h2 id="libraries">
+    <h2 id="libraries" class="title">
         <i class="fa fa-dropbox"></i>
         Libraries
     </h2>
@@ -603,7 +603,7 @@
     </div>
 </section>
 <section id="workshops">
-    <h2>
+    <h2 class="title">
         <i class="fa fa-code" aria-hidden="true"></i>
         Coding workshops
     </h2>
@@ -660,7 +660,7 @@
     </div>
 </section>
 <section id="video">
-    <h2>
+    <h2 class="title">
         <i class="fa fa-video-camera" aria-hidden="true"></i>
         Video tutorials
     </h2>
