Use the same style for panels in blog and portfolio.

--- a/source/blog.html
+++ b/source/blog.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Bienvenid@
+title: Blog
 generator: pagination
 pagination:
     max_per_page: 6
 use:
     - posts_categories
 ---
-<h1>¿De qué trata este blog?</h1>
+<h1 class="title">¿De qué trata este blog?</h1>
 
 <p>
     Las personas que me conocen sabrán que me encanta pasar el
