Create translations for the main pages of the site

--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -34,27 +34,27 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Navegación</span>
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/" title="Your argument is invalid">
+                <a class="navbar-brand" href="/en/" title="Your argument is invalid">
                     <span class="glyphicon glyphicon-home"></span>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/cv/">Curriculum</a></li>
-                    <li><a href="/portfolio/">Portafolio</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/en/cv/">Curriculum</a></li>
+                    <li><a href="/en/portfolio/">Portfolio</a></li>
+                    <li><a href="/en/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/">
-                        <span class="language language-current">MX</span>
+                        <span class="language">MX</span>
                     </a></li>
                     <li><a href="/en/">
-                        <span class="language">US</span>
+                        <span class="language language-current">US</span>
                     </a></li>
                     <li>
                         <a href="/atom.xml" class="link-icon">
@@ -94,8 +94,10 @@
                         I've been programming, professionally since graduating with a
                         Master's Degree in Computer Science in 2003. I have over 12
                         years experience in tech both in Mexico and the United States.
-                        In my spare time I love to spend time with my family and learn
-                        new programming languages.
+                    </p>
+                    <p>
+                        I am looking forward to be part of a supportive development team that values
+                        work-life balance and practices TDD, pair programming and code reviews.
                     </p>
                 </div>
             </div>
@@ -113,6 +115,47 @@
                     </h2>
                 </div>
                 <ul class="list-group">
+                    <li class="list-group-item">
+                        <em>Codeup [01/16 – current]</em>.
+                        <strong>Web development Instructor</strong>.
+                        <p>
+                            I am currently working in SA. TX. as a full-time instructor teaching
+                            either <strong>PHP (Laravel)</strong> or <strong>Java (Spring Boot)
+                            </strong> to entry-level full-stack developers. My activities as
+                            instructor include <strong>pair programming</strong> and <strong>code
+                            reviews</strong> with the students.
+                        </p>
+                        <p>
+                            During the last year I collaborated a couple of times with 2 open source
+                            projects:
+                            <a href="https://drupalconsole.com" target="_blank" rel="noopener">
+                                Drupal Console
+                            </a>, proposing some guidelines to improve the testing coverage for the
+                            project (
+                            <a
+                                href="https://github.com/hechoendrupal/drupal-console/pull/2891"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                #2891
+                            </a> is a good example), and
+                            <a
+                                href="http://codeception.com" target="_blank"
+                                rel="noopener"
+                            >
+                                Codeception
+                            </a>, adding support for PHPUnit 6 (
+                            <a
+                                href="https://github.com/Codeception/Codeception/pull/4142"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                #4142
+                            </a>
+                            ). I also had the chance to attend <strong>"Uncle" Bob’s</strong>
+                            Clean Code workshop last year in Austin.
+                        </p>
+                    </li>
                     <li class="list-group-item">
                         <em>Inertia Interactive Media [05/15 – 12/15].</em>.
                         <strong>Web Developer</strong>.
@@ -163,27 +206,6 @@
                     </li>
                 </ul>
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h2>
-                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                        Teaching experience
-                    </h2>
-                </div>
-                <div class="panel-body">
-                    <p>
-                        I am currently working at Codeup in SA. TX. as a full-time
-                        instructor teaching either PHP or Java to future entry-level
-                        full-stack developers During the last 11 years I've been also
-                        working as a part-time lecturer in 10 universities in Puebla. I
-                        have given classes to more than 65 groups, bachelor and master
-                        degree. I have successfully directed 4 thesis. I also have
-                        published some papers being the most relevant a chapter in the
-                        Lecture Notes in Computer Science Volume Number 4386, pages
-                        194–211 in 2007.
-                    </p>
-                </div>
-            </div>
         </section>
         <section class="col-xs-12 col-sm-4">
             <div class="panel panel-primary">
@@ -233,6 +255,28 @@
                 <ul class="list-group">
                     <li class="list-group-item">English & Spanish</li>
                 </ul>
+            </div>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xs-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                        Technical Instruction experience
+                    </h2>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        During the last 11 years I've been also working as a part-time lecturer in
+                        10 universities in Puebla. I have given classes to more than 65 groups,
+                        bachelor and master degree. I have successfully directed 4 thesis. I also
+                        have published some papers being the most relevant a chapter in the
+                        <strong>Lecture Notes in Computer Science Volume Number 4386</strong>,
+                        pages 194–211 in 2007.
+                    </p>
+                </div>
             </div>
         </section>
     </div>
