Fix menu links in portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,27 +34,27 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Navegación</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/en/" title="Your argument is invalid">
+                <a class="navbar-brand" href="/" title="Your argument is invalid">
                     <span class="glyphicon glyphicon-home"></span>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/en/cv/">Curriculum</a></li>
-                    <li><a href="/en/portfolio/">Portfolio</a></li>
-                    <li><a href="/en/blog/">Blog</a></li>
+                    <li><a href="/cv/">Curriculum</a></li>
+                    <li><a href="/portfolio/">Portafolio</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/">
-                        <span class="language">MX</span>
+                        <span class="language language-current">MX</span>
                     </a></li>
                     <li><a href="/en/">
-                        <span class="language language-current">US</span>
+                        <span class="language">US</span>
                     </a></li>
                     <li>
                         <a href="/atom.xml" class="link-icon">
