Translate CV to spanish.

--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -24,12 +24,12 @@ use:
                         San Antonio TX
                     </p>
                     <p>
-                        I've been programming, professionally since graduating with a
+                        I've been programming professionally since graduating with a
                         Master's Degree in Computer Science in 2003. I have over 12
                         years experience in tech both in Mexico and the United States.
                     </p>
                     <p>
-                        I am looking forward to be part of a supportive development team that values
+                        I am looking forward to be part of a development team that values
                         work-life balance and practices TDD, pair programming and code reviews.
                     </p>
                 </div>
