Translate CV to spanish

--- a/cv/index.html
+++ b/cv/index.html
@@ -75,7 +75,7 @@
     <div class="media col-sm-12 avatar">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h1 class="title">Luis Montealegre <small>Web Developer</small></h1>
+                <h1 class="title">Luis Montealegre <small>Desarrollador Web</small></h1>
             </div>
             <div class="panel-body">
                 <div class="media-left media-middle">
@@ -91,11 +91,14 @@
                         San Antonio TX
                     </p>
                     <p>
-                        I've been programming, professionally since graduating with a
-                        Master's Degree in Computer Science in 2003. I have over 12
-                        years experience in tech both in Mexico and the United States.
-                        In my spare time I love to spend time with my family and learn
-                        new programming languages.
+                        He programado profesionalmente, desde que me gradué de la Maestría en
+                        Ciencias de la Computación en 2003. Tengo más de 12 años de experiencia en
+                        el área, tanto en México como en Estados Unidos.
+                    </p>
+                    <p>
+                        Estoy buscando formar parte de un equipo de desarrollo que valore el
+                        equilibrio trabajo-vida y que practique TDD, pair programming y
+                        revisiones de código.
                     </p>
                 </div>
             </div>
@@ -109,80 +112,98 @@
                 <div class="panel-heading">
                     <h2>
                         <i class="fa fa-building" aria-hidden="true"></i>
-                        Work Experience
+                        Experiencia laboral
                     </h2>
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
+                        <em>Codeup [01/16 – actual]</em>.
+                        <strong>Instructor de Desarrollo Web</strong>.
+                        <p>
+                            Actualmente estoy trabajando en SA. TX. como instructor de tiempo
+                            completo, enseñando ya sea <strong>PHP (Laravel)</strong> o
+                            <strong>Java (Spring Boot)</strong> a desarrolladores full-stack que
+                            inician su carrera. Mis actividades como instructor incluyen <strong>
+                            pair programming</strong> y <strong>revisiones de código</strong> con
+                            los estudiantes.
+                        </p>
+                        <p>
+                            El año pasado colaboré un par de veces con 2 proyectos open source:
+                            <a href="https://drupalconsole.com" target="_blank" rel="noopener">
+                                Drupal Console
+                            </a>, proponiendo algunas guías para mejorar el procentaje de cobertura
+                            de las pruebas automáticas del proyecto (
+                            <a
+                                href="https://github.com/hechoendrupal/drupal-console/pull/2891"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                #2891
+                            </a> es un buen ejemplo), y
+                            <a
+                                href="http://codeception.com" target="_blank"
+                                rel="noopener"
+                            >
+                                Codeception
+                            </a>, agregando soporte para PHPUnit 6 (
+                            <a
+                                href="https://github.com/Codeception/Codeception/pull/4142"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                #4142
+                            </a>
+                            ). También tuve la oportunidad de asistir al taller de Clean Code de
+                            <strong>"Uncle" Bob</strong> el año pasado en Austin.
+                        </p>
+                    </li>
+                    <li class="list-group-item">
                         <em>Inertia Interactive Media [05/15 – 12/15].</em>.
-                        <strong>Web Developer</strong>.
-                        Maintainer of a <strong>Symfony2</strong> application with
-                        an integration to the <strong>Salesforfoce SOAP API</strong>
-                        implemented via Web hooks and <strong>RabbitMQ</strong>
-                        queues.
+                        <strong>Desarrollador Web</strong>.
+                        Estuve a cargo de una aplicación <strong>Symfony2</strong> con una integración
+                        con la <strong>API SOAP de Salesforfoce</strong> implementada a través de
+                        Web hooks y colas en <strong>RabbitMQ</strong>.
                     </li>
                     <li class="list-group-item">
                         <em>Digizent International [04/13 – 12/13]</em>.
-                        <strong>PHP developer</strong> of a <strong>Symfony1</strong>
-                        application to manage email campaigns for fundraising.
+                        <strong>Desarrollador PHP</strong> de una aplicación <strong>Symfony1</strong>
+                        para manejar campañas de correo electrónico para recaudación de fondos.
                     </li>
                     <li class="list-group-item">
                         <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
-                        <strong>.NET Developer</strong> of the Advancement Solutions
-                        team. I collaborated with the team with a product developed
-                        in <strong>C#</strong> and <strong>VB</strong>, which made
-                        heavy use of <strong>Oracle PL/SQL</strong> stored procedures.
+                        <strong>Desarrollador .NET</strong> del equipo Advancement Solutions.
+                        Colaboré con el equipo con un producto desarrollado en <strong>C#</strong>
+                        y <strong>VB</strong>, el cual hacía uso de stored procedures en
+                        <strong>Oracle PL/SQL</strong>.
                     </li>
                     <li class="list-group-item">
-                        <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
-                        Consultant</strong>. During this period I worked maintaining
-                        the data access layer of a POS using <strong>Hibernate</strong>
-                        and <strong>PostgreSQL</strong> and <strong>couching</strong>
-                        some Jr. consultants.
+                        <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Consultor Java</strong>.
+                        Durante este periodo trabajé manteniendo la capa de acceso a datos de un
+                        Punto de Venta hecho en <strong>Hibernate</strong> y
+                        <strong>PostgreSQL</strong>. Hice también un poco de <strong>couching</strong>
+                        con algunos consultores Jr.
                     </li>
                     <li class="list-group-item">
                         <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
-                        <strong>Java and PHP developer</strong> of the department:
-                        Desarrollo e Innovación de Sistemas. I developed a
-                        monitoring application for some customer service systems
-                        written in <strong>Java</strong> with a reporting website
-                        written in <strong>PHP</strong>.
+                        <strong>Desarrollador Java y PHP</strong> del departamento de Desarrollo e
+                        Innovación de Sistemas. Desarrollé una aplicación de monitoreo para algunos
+                        sistemas de atención al cliente escritos en <strong>Java</strong> con un
+                        aplicación Web de reportes escrita en <strong>PHP</strong>.
                     </li>
                     <li class="list-group-item">
-                        <em>Independent PHP consultant (part-time) [08/07 – 01/14]</em>.
-                        I worked for several companies in Puebla. I developed several
-                        applications with <strong>ZF1</strong>, <strong>Slim</strong>
-                        and <strong>Silex</strong> mainly.
+                        <em>Consultor PHP independiente (medio tiempo) [08/07 – 01/14]</em>.
+                        Trabajé para varias empresas en Puebla. Desarrollé varias aplicaciones Web
+                        en <strong>ZF1</strong>, <strong>Slim</strong> y <strong>Silex</strong>
+                        principlamente.
                     </li>
                     <li class="list-group-item">
-                        <em>Independent PHP consultant (full-time) [01/14 – 05/15]</em>.
-                        I worked for several agencies in Mexico City (Indava and
-                        Mupcow), and some others in Puebla (Sistemas Integrales de
-                        Cómputo Montellano (SICOM) and Sii Ayuda)  maintaining
-                        <strong>Symfony2</strong> applications mainly.
+                        <em>Consultor PHP independiente (tiempo completo) [01/14 – 05/15]</em>.
+                        Trabajé para varias agencias en la Ciudad de México (Indava y Mupcow), y
+                        algunas otras en Puebla (Sistemas Integrales de Cómputo Montellano (SICOM) y
+                        Sii Ayuda) manteniendo aplicaciones en <strong>Symfony2</strong>
+                        principalmente.
                     </li>
                 </ul>
-            </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h2>
-                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                        Teaching experience
-                    </h2>
-                </div>
-                <div class="panel-body">
-                    <p>
-                        I am currently working at Codeup in SA. TX. as a full-time
-                        instructor teaching either PHP or Java to future entry-level
-                        full-stack developers During the last 11 years I've been also
-                        working as a part-time lecturer in 10 universities in Puebla. I
-                        have given classes to more than 65 groups, bachelor and master
-                        degree. I have successfully directed 4 thesis. I also have
-                        published some papers being the most relevant a chapter in the
-                        Lecture Notes in Computer Science Volume Number 4386, pages
-                        194–211 in 2007.
-                    </p>
-                </div>
             </div>
         </section>
         <section class="col-xs-12 col-sm-4">
@@ -190,17 +211,17 @@
                 <div class="panel-heading">
                     <h2>
                         <i class="fa fa-university" aria-hidden="true"></i>
-                        Education
+                        Educación
                     </h2>
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <strong>Master in Computer Science</strong>. Benemérita Universidad Autónoma
-                        de Puebla. 2003-2005.
+                        <strong>Maestría en Ciencias de la Computación</strong>.
+                        Benemérita Universidad Autónoma de Puebla. 2003-2005.
                     </li>
                     <li class="list-group-item">
-                        <strong>BS in Computer Science</strong>. Benemérita Universidad Autónoma de
-                        Puebla. 1998-2003.
+                        <strong>Licenciatura en Ciencias de la Computación</strong>.
+                        Benemérita Universidad Autónoma de Puebla. 1998-2003.
                     </li>
                 </ul>
             </div>
@@ -208,7 +229,7 @@
                 <div class="panel-heading">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        Certifications
+                        Certificaciones
                     </h2>
                 </div>
                 <ul class="list-group">
@@ -227,12 +248,34 @@
                 <div class="panel-heading">
                     <h2>
                         <i class="fa fa-language" aria-hidden="true"></i>
-                        Languages
+                        Lenguajes
                     </h2>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">English & Spanish</li>
+                    <li class="list-group-item">Inglés y Español</li>
                 </ul>
+            </div>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xs-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2>
+                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                        Experiencia como Instructor Técnico
+                    </h2>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        Durante los últimos 11 años también trabajé como profesor de tiempo parcial
+                        en 10 universidades en Puebla. He dado clases a más de 65 grupos, de
+                        licenciatura y de maestría. He dirigido exitosamente 4 tesis. Y he pulicado
+                        algunos articulos, siendo el más relevante un capítulo en el
+                        <strong>Lecture Notes in Computer Science, número de volumen 4386</strong>,
+                        páginas 194–211 en 2007.
+                    </p>
+                </div>
             </div>
         </section>
     </div>
