Fix typos, reword some sections.

--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -26,7 +26,7 @@ use:
                     <p>
                         I've been programming professionally since graduating with a
                         Master's Degree in Computer Science in 2003. I have over 12
-                        years experience in tech both in Mexico and the United States.
+                        years of experience in tech both in Mexico and the United States.
                     </p>
                     <p>
                         I am looking forward to be part of a development team that values
@@ -205,7 +205,7 @@ use:
                         During the last 11 years I've been also working as a part-time lecturer in
                         10 universities in Puebla. I have given classes to more than 65 groups,
                         bachelor and master degree. I have successfully directed 4 thesis. I also
-                        have published some papers being the most relevant a chapter in the
+                        have published some papers, being the most relevant a chapter in the
                         <strong>Lecture Notes in Computer Science Volume Number 4386</strong>,
                         pages 194–211 in 2007.
                     </p>
